parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> VAR FUNC M
Rule 2     VAR -> TIPO DECLARE SEMICOLON
Rule 3     VAR -> TIPO MAT SEMICOLON
Rule 4     VAR -> VAR TIPO DECLARE SEMICOLON
Rule 5     VAR -> VAR TIPO MAT SEMICOLON
Rule 6     VAR -> <empty>
Rule 7     DECLARE -> ID
Rule 8     DECLARE -> DECLARE COMA ID
Rule 9     DECLARE -> ASSIGN
Rule 10    DECLARE -> DECLARE COMA ASSIGN
Rule 11    ASSIGN -> ID EQUAL EA
Rule 12    ASSIGN -> MAT EQUAL EA
Rule 13    FUNC -> FUNCTION AUX_FUNC SET_ID OPEN_PARENTH CLOSING_PARENTH DECLARE_FUNC OPEN_BRACES S CLOSING_BRACES RETURN IF_AUX3
Rule 14    FUNC -> FUNC AUX_FUNC FUNCTION SET_ID OPEN_PARENTH CLOSING_PARENTH OPEN_BRACES DECLARE_FUNC S CLOSING_BRACES RETURN IF_AUX3
Rule 15    FUNC -> empty
Rule 16    SET_ID -> ID
Rule 17    DECLARE_FUNC -> empty
Rule 18    RETURN -> empty
Rule 19    AUX_FUNC -> empty
Rule 20    M -> MAIN OPEN_PARENTH CLOSING_PARENTH OPEN_BRACES S CLOSING_BRACES
Rule 21    TIPO -> INT
Rule 22    TIPO -> DOUBLE
Rule 23    S -> STATEMENTS
Rule 24    S -> S STATEMENTS
Rule 25    S -> <empty>
Rule 26    STATEMENTS -> VAR
Rule 27    STATEMENTS -> IDSTAT
Rule 28    STATEMENTS -> PRINTSTAT
Rule 29    STATEMENTS -> READSTAT
Rule 30    STATEMENTS -> IFSTAT
Rule 31    STATEMENTS -> WHILESTAT
Rule 32    STATEMENTS -> DOSTAT
Rule 33    STATEMENTS -> FORSTAT
Rule 34    STATEMENTS -> FUNCSTAT
Rule 35    STATEMENTS -> INC_STAT
Rule 36    STATEMENTS -> <empty>
Rule 37    IDSTAT -> ASSIGN SEMICOLON
Rule 38    PRINTSTAT -> PRINT OPEN_PARENTH EA CLOSING_PARENTH SEMICOLON
Rule 39    PRINTSTAT -> PRINT OPEN_PARENTH STRING CLOSING_PARENTH SEMICOLON
Rule 40    READSTAT -> READ OPEN_PARENTH EA CLOSING_PARENTH SEMICOLON
Rule 41    IFSTAT -> IF OPEN_PARENTH EL CLOSING_PARENTH IF_AUX1 IN_S IF_AUX3
Rule 42    IFSTAT -> IF OPEN_PARENTH EL CLOSING_PARENTH IF_AUX1 IN_S ELSE IF_AUX2 IN_S IF_AUX3
Rule 43    IF_AUX1 -> empty
Rule 44    IF_AUX2 -> empty
Rule 45    IF_AUX3 -> empty
Rule 46    empty -> <empty>
Rule 47    WHILESTAT -> WHILE WHILE_AUX_1 OPEN_PARENTH EL CLOSING_PARENTH WHILE_AUX_2 IN_S
Rule 48    WHILE_AUX_1 -> empty
Rule 49    WHILE_AUX_2 -> empty
Rule 50    DOSTAT -> DO WHILE_AUX_1 IN_S WHILE OPEN_PARENTH EL CLOSING_PARENTH SEMICOLON
Rule 51    FORSTAT -> FOR OPEN_PARENTH ASSIGN SEMICOLON WHILE_AUX_1 EL SEMICOLON WHILE_AUX_2 ASSIGN CLOSING_PARENTH IN_S
Rule 52    FUNCSTAT -> ID OPEN_PARENTH CLOSING_PARENTH SEMICOLON
Rule 53    INC_STAT -> ID PLUSPLUS SEMICOLON
Rule 54    INC_STAT -> ID MINUSMINUS SEMICOLON
Rule 55    IN_S -> OPEN_BRACES S CLOSING_BRACES
Rule 56    EA -> TA
Rule 57    EA -> EA PLUS TA
Rule 58    EA -> EA MINUS TA
Rule 59    FA -> CONSTANT
Rule 60    FA -> ID
Rule 61    FA -> MAT
Rule 62    FA -> OPEN_PARENTH EA CLOSING_PARENTH
Rule 63    TA -> FA
Rule 64    TA -> TA MULTIPLY FA
Rule 65    TA -> TA DIVISION FA
Rule 66    EL -> TL
Rule 67    EL -> EL OR TL
Rule 68    TL -> FL
Rule 69    TL -> TL AND FL
Rule 70    FL -> NL OPERATORS NL
Rule 71    FL -> EA OPERATORS EA
Rule 72    FL -> NL
Rule 73    FL -> OPEN_PARENTH EL CLOSING_PARENTH
Rule 74    NL -> NOT EL
Rule 75    OPERATORS -> NOT_EQUAL
Rule 76    OPERATORS -> LOWER_THAN
Rule 77    OPERATORS -> BIGGER_THAN
Rule 78    OPERATORS -> EQUAL_EQUAL
Rule 79    MAT -> ID MAT_BRACKET
Rule 80    MAT_BRACKET -> OPEN_BRACKET EA CLOSING_BRACKET
Rule 81    MAT_BRACKET -> MAT_BRACKET OPEN_BRACKET EA CLOSING_BRACKET

Terminals, with rules where they appear

AND                  : 69
BIGGER_THAN          : 77
CLOSING_BRACES       : 13 14 20 55
CLOSING_BRACKET      : 80 81
CLOSING_PARENTH      : 13 14 20 38 39 40 41 42 47 50 51 52 62 73
COMA                 : 8 10
COMMENT              : 
CONSTANT             : 59
DIVISION             : 65
DO                   : 50
DOUBLE               : 22
ELSE                 : 42
EQUAL                : 11 12
EQUAL_EQUAL          : 78
FOR                  : 51
FUNCTION             : 13 14
ID                   : 7 8 11 16 52 53 54 60 79
IF                   : 41 42
INT                  : 21
LOWER_THAN           : 76
MAIN                 : 20
MINUS                : 58
MINUSMINUS           : 54
MULTIPLY             : 64
NOT                  : 74
NOT_EQUAL            : 75
OPEN_BRACES          : 13 14 20 55
OPEN_BRACKET         : 80 81
OPEN_PARENTH         : 13 14 20 38 39 40 41 42 47 50 51 52 62 73
OR                   : 67
PLUS                 : 57
PLUSPLUS             : 53
PRINT                : 38 39
READ                 : 40
SEMICOLON            : 2 3 4 5 37 38 39 40 50 51 51 52 53 54
STRING               : 39
WHILE                : 47 50
error                : 

Nonterminals, with rules where they appear

ASSIGN               : 9 10 37 51 51
AUX_FUNC             : 13 14
DECLARE              : 2 4 8 10
DECLARE_FUNC         : 13 14
DOSTAT               : 32
EA                   : 11 12 38 40 57 58 62 71 71 80 81
EL                   : 41 42 47 50 51 67 73 74
FA                   : 63 64 65
FL                   : 68 69
FORSTAT              : 33
FUNC                 : 1 14
FUNCSTAT             : 34
IDSTAT               : 27
IFSTAT               : 30
IF_AUX1              : 41 42
IF_AUX2              : 42
IF_AUX3              : 13 14 41 42
INC_STAT             : 35
IN_S                 : 41 42 42 47 50 51
M                    : 1
MAT                  : 3 5 12 61
MAT_BRACKET          : 79 81
NL                   : 70 70 72
OPERATORS            : 70 71
PRINTSTAT            : 28
PROGRAMA             : 0
READSTAT             : 29
RETURN               : 13 14
S                    : 13 14 20 24 55
SET_ID               : 13 14
STATEMENTS           : 23 24
TA                   : 56 57 58 64 65
TIPO                 : 2 3 4 5
TL                   : 66 67 69
VAR                  : 1 4 5 26
WHILESTAT            : 31
WHILE_AUX_1          : 47 50 51
WHILE_AUX_2          : 47 51
empty                : 15 17 18 19 43 44 45 48 49

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . VAR FUNC M
    (2) VAR -> . TIPO DECLARE SEMICOLON
    (3) VAR -> . TIPO MAT SEMICOLON
    (4) VAR -> . VAR TIPO DECLARE SEMICOLON
    (5) VAR -> . VAR TIPO MAT SEMICOLON
    (6) VAR -> .
    (21) TIPO -> . INT
    (22) TIPO -> . DOUBLE

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
    FUNCTION        reduce using rule 6 (VAR -> .)
    MAIN            reduce using rule 6 (VAR -> .)
    INT             shift and go to state 3
    DOUBLE          shift and go to state 4

  ! INT             [ reduce using rule 6 (VAR -> .) ]
  ! DOUBLE          [ reduce using rule 6 (VAR -> .) ]

    VAR                            shift and go to state 1
    PROGRAMA                       shift and go to state 2
    TIPO                           shift and go to state 5

state 1

    (1) PROGRAMA -> VAR . FUNC M
    (4) VAR -> VAR . TIPO DECLARE SEMICOLON
    (5) VAR -> VAR . TIPO MAT SEMICOLON
    (13) FUNC -> . FUNCTION AUX_FUNC SET_ID OPEN_PARENTH CLOSING_PARENTH DECLARE_FUNC OPEN_BRACES S CLOSING_BRACES RETURN IF_AUX3
    (14) FUNC -> . FUNC AUX_FUNC FUNCTION SET_ID OPEN_PARENTH CLOSING_PARENTH OPEN_BRACES DECLARE_FUNC S CLOSING_BRACES RETURN IF_AUX3
    (15) FUNC -> . empty
    (21) TIPO -> . INT
    (22) TIPO -> . DOUBLE
    (46) empty -> .

  ! shift/reduce conflict for FUNCTION resolved as shift
    FUNCTION        shift and go to state 6
    INT             shift and go to state 3
    DOUBLE          shift and go to state 4
    MAIN            reduce using rule 46 (empty -> .)

  ! FUNCTION        [ reduce using rule 46 (empty -> .) ]

    FUNC                           shift and go to state 7
    TIPO                           shift and go to state 8
    empty                          shift and go to state 9

state 2

    (0) S' -> PROGRAMA .



state 3

    (21) TIPO -> INT .

    ID              reduce using rule 21 (TIPO -> INT .)


state 4

    (22) TIPO -> DOUBLE .

    ID              reduce using rule 22 (TIPO -> DOUBLE .)


state 5

    (2) VAR -> TIPO . DECLARE SEMICOLON
    (3) VAR -> TIPO . MAT SEMICOLON
    (7) DECLARE -> . ID
    (8) DECLARE -> . DECLARE COMA ID
    (9) DECLARE -> . ASSIGN
    (10) DECLARE -> . DECLARE COMA ASSIGN
    (79) MAT -> . ID MAT_BRACKET
    (11) ASSIGN -> . ID EQUAL EA
    (12) ASSIGN -> . MAT EQUAL EA

    ID              shift and go to state 12

    MAT                            shift and go to state 10
    ASSIGN                         shift and go to state 11
    DECLARE                        shift and go to state 13

state 6

    (13) FUNC -> FUNCTION . AUX_FUNC SET_ID OPEN_PARENTH CLOSING_PARENTH DECLARE_FUNC OPEN_BRACES S CLOSING_BRACES RETURN IF_AUX3
    (19) AUX_FUNC -> . empty
    (46) empty -> .

    ID              reduce using rule 46 (empty -> .)

    AUX_FUNC                       shift and go to state 14
    empty                          shift and go to state 15

state 7

    (1) PROGRAMA -> VAR FUNC . M
    (14) FUNC -> FUNC . AUX_FUNC FUNCTION SET_ID OPEN_PARENTH CLOSING_PARENTH OPEN_BRACES DECLARE_FUNC S CLOSING_BRACES RETURN IF_AUX3
    (20) M -> . MAIN OPEN_PARENTH CLOSING_PARENTH OPEN_BRACES S CLOSING_BRACES
    (19) AUX_FUNC -> . empty
    (46) empty -> .

    MAIN            shift and go to state 16
    FUNCTION        reduce using rule 46 (empty -> .)

    AUX_FUNC                       shift and go to state 17
    M                              shift and go to state 18
    empty                          shift and go to state 15

state 8

    (4) VAR -> VAR TIPO . DECLARE SEMICOLON
    (5) VAR -> VAR TIPO . MAT SEMICOLON
    (7) DECLARE -> . ID
    (8) DECLARE -> . DECLARE COMA ID
    (9) DECLARE -> . ASSIGN
    (10) DECLARE -> . DECLARE COMA ASSIGN
    (79) MAT -> . ID MAT_BRACKET
    (11) ASSIGN -> . ID EQUAL EA
    (12) ASSIGN -> . MAT EQUAL EA

    ID              shift and go to state 12

    MAT                            shift and go to state 19
    ASSIGN                         shift and go to state 11
    DECLARE                        shift and go to state 20

state 9

    (15) FUNC -> empty .

    MAIN            reduce using rule 15 (FUNC -> empty .)
    FUNCTION        reduce using rule 15 (FUNC -> empty .)


state 10

    (3) VAR -> TIPO MAT . SEMICOLON
    (12) ASSIGN -> MAT . EQUAL EA

    SEMICOLON       shift and go to state 22
    EQUAL           shift and go to state 21


state 11

    (9) DECLARE -> ASSIGN .

    SEMICOLON       reduce using rule 9 (DECLARE -> ASSIGN .)
    COMA            reduce using rule 9 (DECLARE -> ASSIGN .)


state 12

    (7) DECLARE -> ID .
    (79) MAT -> ID . MAT_BRACKET
    (11) ASSIGN -> ID . EQUAL EA
    (80) MAT_BRACKET -> . OPEN_BRACKET EA CLOSING_BRACKET
    (81) MAT_BRACKET -> . MAT_BRACKET OPEN_BRACKET EA CLOSING_BRACKET

    SEMICOLON       reduce using rule 7 (DECLARE -> ID .)
    COMA            reduce using rule 7 (DECLARE -> ID .)
    EQUAL           shift and go to state 24
    OPEN_BRACKET    shift and go to state 23

    MAT_BRACKET                    shift and go to state 25

state 13

    (2) VAR -> TIPO DECLARE . SEMICOLON
    (8) DECLARE -> DECLARE . COMA ID
    (10) DECLARE -> DECLARE . COMA ASSIGN

    SEMICOLON       shift and go to state 26
    COMA            shift and go to state 27


state 14

    (13) FUNC -> FUNCTION AUX_FUNC . SET_ID OPEN_PARENTH CLOSING_PARENTH DECLARE_FUNC OPEN_BRACES S CLOSING_BRACES RETURN IF_AUX3
    (16) SET_ID -> . ID

    ID              shift and go to state 29

    SET_ID                         shift and go to state 28

state 15

    (19) AUX_FUNC -> empty .

    FUNCTION        reduce using rule 19 (AUX_FUNC -> empty .)
    ID              reduce using rule 19 (AUX_FUNC -> empty .)


state 16

    (20) M -> MAIN . OPEN_PARENTH CLOSING_PARENTH OPEN_BRACES S CLOSING_BRACES

    OPEN_PARENTH    shift and go to state 30


state 17

    (14) FUNC -> FUNC AUX_FUNC . FUNCTION SET_ID OPEN_PARENTH CLOSING_PARENTH OPEN_BRACES DECLARE_FUNC S CLOSING_BRACES RETURN IF_AUX3

    FUNCTION        shift and go to state 31


state 18

    (1) PROGRAMA -> VAR FUNC M .

    $end            reduce using rule 1 (PROGRAMA -> VAR FUNC M .)


state 19

    (5) VAR -> VAR TIPO MAT . SEMICOLON
    (12) ASSIGN -> MAT . EQUAL EA

    SEMICOLON       shift and go to state 32
    EQUAL           shift and go to state 21


state 20

    (4) VAR -> VAR TIPO DECLARE . SEMICOLON
    (8) DECLARE -> DECLARE . COMA ID
    (10) DECLARE -> DECLARE . COMA ASSIGN

    SEMICOLON       shift and go to state 33
    COMA            shift and go to state 27


state 21

    (12) ASSIGN -> MAT EQUAL . EA
    (56) EA -> . TA
    (57) EA -> . EA PLUS TA
    (58) EA -> . EA MINUS TA
    (63) TA -> . FA
    (64) TA -> . TA MULTIPLY FA
    (65) TA -> . TA DIVISION FA
    (59) FA -> . CONSTANT
    (60) FA -> . ID
    (61) FA -> . MAT
    (62) FA -> . OPEN_PARENTH EA CLOSING_PARENTH
    (79) MAT -> . ID MAT_BRACKET

    CONSTANT        shift and go to state 37
    ID              shift and go to state 40
    OPEN_PARENTH    shift and go to state 36

    FA                             shift and go to state 35
    MAT                            shift and go to state 34
    TA                             shift and go to state 38
    EA                             shift and go to state 39

state 22

    (3) VAR -> TIPO MAT SEMICOLON .

    INT             reduce using rule 3 (VAR -> TIPO MAT SEMICOLON .)
    DOUBLE          reduce using rule 3 (VAR -> TIPO MAT SEMICOLON .)
    CLOSING_BRACES  reduce using rule 3 (VAR -> TIPO MAT SEMICOLON .)
    PRINT           reduce using rule 3 (VAR -> TIPO MAT SEMICOLON .)
    READ            reduce using rule 3 (VAR -> TIPO MAT SEMICOLON .)
    IF              reduce using rule 3 (VAR -> TIPO MAT SEMICOLON .)
    WHILE           reduce using rule 3 (VAR -> TIPO MAT SEMICOLON .)
    DO              reduce using rule 3 (VAR -> TIPO MAT SEMICOLON .)
    FOR             reduce using rule 3 (VAR -> TIPO MAT SEMICOLON .)
    ID              reduce using rule 3 (VAR -> TIPO MAT SEMICOLON .)
    FUNCTION        reduce using rule 3 (VAR -> TIPO MAT SEMICOLON .)
    MAIN            reduce using rule 3 (VAR -> TIPO MAT SEMICOLON .)


state 23

    (80) MAT_BRACKET -> OPEN_BRACKET . EA CLOSING_BRACKET
    (56) EA -> . TA
    (57) EA -> . EA PLUS TA
    (58) EA -> . EA MINUS TA
    (63) TA -> . FA
    (64) TA -> . TA MULTIPLY FA
    (65) TA -> . TA DIVISION FA
    (59) FA -> . CONSTANT
    (60) FA -> . ID
    (61) FA -> . MAT
    (62) FA -> . OPEN_PARENTH EA CLOSING_PARENTH
    (79) MAT -> . ID MAT_BRACKET

    CONSTANT        shift and go to state 37
    ID              shift and go to state 40
    OPEN_PARENTH    shift and go to state 36

    FA                             shift and go to state 35
    MAT                            shift and go to state 34
    TA                             shift and go to state 38
    EA                             shift and go to state 41

state 24

    (11) ASSIGN -> ID EQUAL . EA
    (56) EA -> . TA
    (57) EA -> . EA PLUS TA
    (58) EA -> . EA MINUS TA
    (63) TA -> . FA
    (64) TA -> . TA MULTIPLY FA
    (65) TA -> . TA DIVISION FA
    (59) FA -> . CONSTANT
    (60) FA -> . ID
    (61) FA -> . MAT
    (62) FA -> . OPEN_PARENTH EA CLOSING_PARENTH
    (79) MAT -> . ID MAT_BRACKET

    CONSTANT        shift and go to state 37
    ID              shift and go to state 40
    OPEN_PARENTH    shift and go to state 36

    FA                             shift and go to state 35
    MAT                            shift and go to state 34
    TA                             shift and go to state 38
    EA                             shift and go to state 42

state 25

    (79) MAT -> ID MAT_BRACKET .
    (81) MAT_BRACKET -> MAT_BRACKET . OPEN_BRACKET EA CLOSING_BRACKET

    MULTIPLY        reduce using rule 79 (MAT -> ID MAT_BRACKET .)
    DIVISION        reduce using rule 79 (MAT -> ID MAT_BRACKET .)
    PLUS            reduce using rule 79 (MAT -> ID MAT_BRACKET .)
    MINUS           reduce using rule 79 (MAT -> ID MAT_BRACKET .)
    NOT_EQUAL       reduce using rule 79 (MAT -> ID MAT_BRACKET .)
    LOWER_THAN      reduce using rule 79 (MAT -> ID MAT_BRACKET .)
    BIGGER_THAN     reduce using rule 79 (MAT -> ID MAT_BRACKET .)
    EQUAL_EQUAL     reduce using rule 79 (MAT -> ID MAT_BRACKET .)
    SEMICOLON       reduce using rule 79 (MAT -> ID MAT_BRACKET .)
    COMA            reduce using rule 79 (MAT -> ID MAT_BRACKET .)
    CLOSING_PARENTH reduce using rule 79 (MAT -> ID MAT_BRACKET .)
    CLOSING_BRACKET reduce using rule 79 (MAT -> ID MAT_BRACKET .)
    AND             reduce using rule 79 (MAT -> ID MAT_BRACKET .)
    OR              reduce using rule 79 (MAT -> ID MAT_BRACKET .)
    EQUAL           reduce using rule 79 (MAT -> ID MAT_BRACKET .)
    OPEN_BRACKET    shift and go to state 43


state 26

    (2) VAR -> TIPO DECLARE SEMICOLON .

    INT             reduce using rule 2 (VAR -> TIPO DECLARE SEMICOLON .)
    DOUBLE          reduce using rule 2 (VAR -> TIPO DECLARE SEMICOLON .)
    CLOSING_BRACES  reduce using rule 2 (VAR -> TIPO DECLARE SEMICOLON .)
    PRINT           reduce using rule 2 (VAR -> TIPO DECLARE SEMICOLON .)
    READ            reduce using rule 2 (VAR -> TIPO DECLARE SEMICOLON .)
    IF              reduce using rule 2 (VAR -> TIPO DECLARE SEMICOLON .)
    WHILE           reduce using rule 2 (VAR -> TIPO DECLARE SEMICOLON .)
    DO              reduce using rule 2 (VAR -> TIPO DECLARE SEMICOLON .)
    FOR             reduce using rule 2 (VAR -> TIPO DECLARE SEMICOLON .)
    ID              reduce using rule 2 (VAR -> TIPO DECLARE SEMICOLON .)
    FUNCTION        reduce using rule 2 (VAR -> TIPO DECLARE SEMICOLON .)
    MAIN            reduce using rule 2 (VAR -> TIPO DECLARE SEMICOLON .)


state 27

    (8) DECLARE -> DECLARE COMA . ID
    (10) DECLARE -> DECLARE COMA . ASSIGN
    (11) ASSIGN -> . ID EQUAL EA
    (12) ASSIGN -> . MAT EQUAL EA
    (79) MAT -> . ID MAT_BRACKET

    ID              shift and go to state 46

    ASSIGN                         shift and go to state 45
    MAT                            shift and go to state 44

state 28

    (13) FUNC -> FUNCTION AUX_FUNC SET_ID . OPEN_PARENTH CLOSING_PARENTH DECLARE_FUNC OPEN_BRACES S CLOSING_BRACES RETURN IF_AUX3

    OPEN_PARENTH    shift and go to state 47


state 29

    (16) SET_ID -> ID .

    OPEN_PARENTH    reduce using rule 16 (SET_ID -> ID .)


state 30

    (20) M -> MAIN OPEN_PARENTH . CLOSING_PARENTH OPEN_BRACES S CLOSING_BRACES

    CLOSING_PARENTH shift and go to state 48


state 31

    (14) FUNC -> FUNC AUX_FUNC FUNCTION . SET_ID OPEN_PARENTH CLOSING_PARENTH OPEN_BRACES DECLARE_FUNC S CLOSING_BRACES RETURN IF_AUX3
    (16) SET_ID -> . ID

    ID              shift and go to state 29

    SET_ID                         shift and go to state 49

state 32

    (5) VAR -> VAR TIPO MAT SEMICOLON .

    INT             reduce using rule 5 (VAR -> VAR TIPO MAT SEMICOLON .)
    DOUBLE          reduce using rule 5 (VAR -> VAR TIPO MAT SEMICOLON .)
    CLOSING_BRACES  reduce using rule 5 (VAR -> VAR TIPO MAT SEMICOLON .)
    PRINT           reduce using rule 5 (VAR -> VAR TIPO MAT SEMICOLON .)
    READ            reduce using rule 5 (VAR -> VAR TIPO MAT SEMICOLON .)
    IF              reduce using rule 5 (VAR -> VAR TIPO MAT SEMICOLON .)
    WHILE           reduce using rule 5 (VAR -> VAR TIPO MAT SEMICOLON .)
    DO              reduce using rule 5 (VAR -> VAR TIPO MAT SEMICOLON .)
    FOR             reduce using rule 5 (VAR -> VAR TIPO MAT SEMICOLON .)
    ID              reduce using rule 5 (VAR -> VAR TIPO MAT SEMICOLON .)
    FUNCTION        reduce using rule 5 (VAR -> VAR TIPO MAT SEMICOLON .)
    MAIN            reduce using rule 5 (VAR -> VAR TIPO MAT SEMICOLON .)


state 33

    (4) VAR -> VAR TIPO DECLARE SEMICOLON .

    INT             reduce using rule 4 (VAR -> VAR TIPO DECLARE SEMICOLON .)
    DOUBLE          reduce using rule 4 (VAR -> VAR TIPO DECLARE SEMICOLON .)
    CLOSING_BRACES  reduce using rule 4 (VAR -> VAR TIPO DECLARE SEMICOLON .)
    PRINT           reduce using rule 4 (VAR -> VAR TIPO DECLARE SEMICOLON .)
    READ            reduce using rule 4 (VAR -> VAR TIPO DECLARE SEMICOLON .)
    IF              reduce using rule 4 (VAR -> VAR TIPO DECLARE SEMICOLON .)
    WHILE           reduce using rule 4 (VAR -> VAR TIPO DECLARE SEMICOLON .)
    DO              reduce using rule 4 (VAR -> VAR TIPO DECLARE SEMICOLON .)
    FOR             reduce using rule 4 (VAR -> VAR TIPO DECLARE SEMICOLON .)
    ID              reduce using rule 4 (VAR -> VAR TIPO DECLARE SEMICOLON .)
    FUNCTION        reduce using rule 4 (VAR -> VAR TIPO DECLARE SEMICOLON .)
    MAIN            reduce using rule 4 (VAR -> VAR TIPO DECLARE SEMICOLON .)


state 34

    (61) FA -> MAT .

    MULTIPLY        reduce using rule 61 (FA -> MAT .)
    DIVISION        reduce using rule 61 (FA -> MAT .)
    PLUS            reduce using rule 61 (FA -> MAT .)
    MINUS           reduce using rule 61 (FA -> MAT .)
    AND             reduce using rule 61 (FA -> MAT .)
    CLOSING_PARENTH reduce using rule 61 (FA -> MAT .)
    OR              reduce using rule 61 (FA -> MAT .)
    NOT_EQUAL       reduce using rule 61 (FA -> MAT .)
    LOWER_THAN      reduce using rule 61 (FA -> MAT .)
    BIGGER_THAN     reduce using rule 61 (FA -> MAT .)
    EQUAL_EQUAL     reduce using rule 61 (FA -> MAT .)
    SEMICOLON       reduce using rule 61 (FA -> MAT .)
    CLOSING_BRACKET reduce using rule 61 (FA -> MAT .)
    COMA            reduce using rule 61 (FA -> MAT .)


state 35

    (63) TA -> FA .

    MULTIPLY        reduce using rule 63 (TA -> FA .)
    DIVISION        reduce using rule 63 (TA -> FA .)
    PLUS            reduce using rule 63 (TA -> FA .)
    MINUS           reduce using rule 63 (TA -> FA .)
    AND             reduce using rule 63 (TA -> FA .)
    CLOSING_PARENTH reduce using rule 63 (TA -> FA .)
    OR              reduce using rule 63 (TA -> FA .)
    NOT_EQUAL       reduce using rule 63 (TA -> FA .)
    LOWER_THAN      reduce using rule 63 (TA -> FA .)
    BIGGER_THAN     reduce using rule 63 (TA -> FA .)
    EQUAL_EQUAL     reduce using rule 63 (TA -> FA .)
    SEMICOLON       reduce using rule 63 (TA -> FA .)
    COMA            reduce using rule 63 (TA -> FA .)
    CLOSING_BRACKET reduce using rule 63 (TA -> FA .)


state 36

    (62) FA -> OPEN_PARENTH . EA CLOSING_PARENTH
    (56) EA -> . TA
    (57) EA -> . EA PLUS TA
    (58) EA -> . EA MINUS TA
    (63) TA -> . FA
    (64) TA -> . TA MULTIPLY FA
    (65) TA -> . TA DIVISION FA
    (59) FA -> . CONSTANT
    (60) FA -> . ID
    (61) FA -> . MAT
    (62) FA -> . OPEN_PARENTH EA CLOSING_PARENTH
    (79) MAT -> . ID MAT_BRACKET

    CONSTANT        shift and go to state 37
    ID              shift and go to state 40
    OPEN_PARENTH    shift and go to state 36

    FA                             shift and go to state 35
    MAT                            shift and go to state 34
    TA                             shift and go to state 38
    EA                             shift and go to state 50

state 37

    (59) FA -> CONSTANT .

    MULTIPLY        reduce using rule 59 (FA -> CONSTANT .)
    DIVISION        reduce using rule 59 (FA -> CONSTANT .)
    PLUS            reduce using rule 59 (FA -> CONSTANT .)
    MINUS           reduce using rule 59 (FA -> CONSTANT .)
    AND             reduce using rule 59 (FA -> CONSTANT .)
    CLOSING_PARENTH reduce using rule 59 (FA -> CONSTANT .)
    OR              reduce using rule 59 (FA -> CONSTANT .)
    NOT_EQUAL       reduce using rule 59 (FA -> CONSTANT .)
    LOWER_THAN      reduce using rule 59 (FA -> CONSTANT .)
    BIGGER_THAN     reduce using rule 59 (FA -> CONSTANT .)
    EQUAL_EQUAL     reduce using rule 59 (FA -> CONSTANT .)
    SEMICOLON       reduce using rule 59 (FA -> CONSTANT .)
    CLOSING_BRACKET reduce using rule 59 (FA -> CONSTANT .)
    COMA            reduce using rule 59 (FA -> CONSTANT .)


state 38

    (56) EA -> TA .
    (64) TA -> TA . MULTIPLY FA
    (65) TA -> TA . DIVISION FA

    CLOSING_BRACKET reduce using rule 56 (EA -> TA .)
    PLUS            reduce using rule 56 (EA -> TA .)
    MINUS           reduce using rule 56 (EA -> TA .)
    NOT_EQUAL       reduce using rule 56 (EA -> TA .)
    LOWER_THAN      reduce using rule 56 (EA -> TA .)
    BIGGER_THAN     reduce using rule 56 (EA -> TA .)
    EQUAL_EQUAL     reduce using rule 56 (EA -> TA .)
    CLOSING_PARENTH reduce using rule 56 (EA -> TA .)
    SEMICOLON       reduce using rule 56 (EA -> TA .)
    COMA            reduce using rule 56 (EA -> TA .)
    AND             reduce using rule 56 (EA -> TA .)
    OR              reduce using rule 56 (EA -> TA .)
    MULTIPLY        shift and go to state 51
    DIVISION        shift and go to state 52


state 39

    (12) ASSIGN -> MAT EQUAL EA .
    (57) EA -> EA . PLUS TA
    (58) EA -> EA . MINUS TA

    SEMICOLON       reduce using rule 12 (ASSIGN -> MAT EQUAL EA .)
    CLOSING_PARENTH reduce using rule 12 (ASSIGN -> MAT EQUAL EA .)
    COMA            reduce using rule 12 (ASSIGN -> MAT EQUAL EA .)
    PLUS            shift and go to state 53
    MINUS           shift and go to state 54


state 40

    (60) FA -> ID .
    (79) MAT -> ID . MAT_BRACKET
    (80) MAT_BRACKET -> . OPEN_BRACKET EA CLOSING_BRACKET
    (81) MAT_BRACKET -> . MAT_BRACKET OPEN_BRACKET EA CLOSING_BRACKET

    MULTIPLY        reduce using rule 60 (FA -> ID .)
    DIVISION        reduce using rule 60 (FA -> ID .)
    PLUS            reduce using rule 60 (FA -> ID .)
    MINUS           reduce using rule 60 (FA -> ID .)
    AND             reduce using rule 60 (FA -> ID .)
    CLOSING_PARENTH reduce using rule 60 (FA -> ID .)
    OR              reduce using rule 60 (FA -> ID .)
    NOT_EQUAL       reduce using rule 60 (FA -> ID .)
    LOWER_THAN      reduce using rule 60 (FA -> ID .)
    BIGGER_THAN     reduce using rule 60 (FA -> ID .)
    EQUAL_EQUAL     reduce using rule 60 (FA -> ID .)
    SEMICOLON       reduce using rule 60 (FA -> ID .)
    CLOSING_BRACKET reduce using rule 60 (FA -> ID .)
    COMA            reduce using rule 60 (FA -> ID .)
    OPEN_BRACKET    shift and go to state 23

    MAT_BRACKET                    shift and go to state 25

state 41

    (80) MAT_BRACKET -> OPEN_BRACKET EA . CLOSING_BRACKET
    (57) EA -> EA . PLUS TA
    (58) EA -> EA . MINUS TA

    CLOSING_BRACKET shift and go to state 55
    PLUS            shift and go to state 53
    MINUS           shift and go to state 54


state 42

    (11) ASSIGN -> ID EQUAL EA .
    (57) EA -> EA . PLUS TA
    (58) EA -> EA . MINUS TA

    SEMICOLON       reduce using rule 11 (ASSIGN -> ID EQUAL EA .)
    CLOSING_PARENTH reduce using rule 11 (ASSIGN -> ID EQUAL EA .)
    COMA            reduce using rule 11 (ASSIGN -> ID EQUAL EA .)
    PLUS            shift and go to state 53
    MINUS           shift and go to state 54


state 43

    (81) MAT_BRACKET -> MAT_BRACKET OPEN_BRACKET . EA CLOSING_BRACKET
    (56) EA -> . TA
    (57) EA -> . EA PLUS TA
    (58) EA -> . EA MINUS TA
    (63) TA -> . FA
    (64) TA -> . TA MULTIPLY FA
    (65) TA -> . TA DIVISION FA
    (59) FA -> . CONSTANT
    (60) FA -> . ID
    (61) FA -> . MAT
    (62) FA -> . OPEN_PARENTH EA CLOSING_PARENTH
    (79) MAT -> . ID MAT_BRACKET

    CONSTANT        shift and go to state 37
    ID              shift and go to state 40
    OPEN_PARENTH    shift and go to state 36
